--- a/trunk/BobChessClock.htm
+++ b/trunk/BobChessClock.htm
@@ -681,8 +681,8 @@ function diffStartTimesForm(show) {
 		document.getElementById('FischerSecsRHP').value = document.getElementById('FischerSecs').value;
 		document.getElementById('SimpleDelaySecsRHP').value = document.getElementById('SimpleDelaySecs').value;
 		document.getElementById('BronsteinSecsRHP').value = document.getElementById('BronsteinSecs').value;
-		document.getElementById('RandomMinRHP').value = document.getElementById('RandomMin').value;
-		document.getElementById('RandomMaxRHP').value = document.getElementById('RandomMax').value;
+		document.getElementById('MinRandomSecsRHP').value = document.getElementById('MinRandomSecs').value;
+		document.getElementById('MaxRandomSecsRHP').value = document.getElementById('MaxRandomSecs').value;
 	} else {
 		document.getElementById('StartTimeForRightPlayer').style.display = 'none';
 		document.getElementById('ForLHSPlayerLabel').style.display = 'none';
